correct btn style

--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
 
 
                     <div class="wfc_cart_footer_bottom">
-                        <button class="btn btn-secondary">
+                        <button class="cmnBtn continueShoppingBtn">
                             <i class="fa-solid fa-arrow-left-long"></i> Continue Shopping
                         </button>
-                        <button class="btn btn-primary">
+                        <button class="cmnBtn checkoutBtn">
                             Checkout <i class="fa-solid fa-sack-dollar"></i>
                         </button>
                     </div>
