--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
-    <!-- <button class="ofcan1 open-button" onclick="openForm()"><i class="fa-solid fa-computer-mouse"></i></button> -->
     
-    <button class="ofcan1 clickMore"><i class="fa-solid fa-cart-shopping"></i></button>
+    <button class="wfcCarticon wfcClickMore"><i class="fa-solid fa-cart-shopping"></i></button>
     <p class="" id="cartItem" style="visibility: visible;">1</p>
 
 
